--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ty Kornegay's Personal Homepage</title>
+    <title>Welcome to ITSC 1110!</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -42,6 +42,13 @@
         <h1>Welcome to My Homepage</h1>
     </header>
     <main>
+        <main>
+            <h2>Welcome to ITSC 1110!</h2>
+                
+                    <p>Welcome to my Github wepage! My name is Ty Kornegay, and I am excited to be taking an Introduction to Computer Science Principles class. Through this course, I have had the pleasure to learn the foundational concepts of computer science, exploring how technology shapes our world, and developing problem-solving skills using computers. I am eager to continue building my knowledge, collaborate with classmates, and discover how computer science can open up new opportunities for creativity and innovation. Thank you for visiting my site as I begin this journey into the world of computing!</p>
+
+                    <h1>Ty Kornegay's Talented Kangaroo | ITSC1110 | Home</h1>
+                    <nav><a href="index.html">Home</a> <a href="introductions.html">Introduction</a> <a href="">Contract</a></nav>
         <p>Hello! I'm Ty Kornegay. This is my personal homepage.</p>
         <p>Feel free to connect with me:</p>
         <ul>
@@ -51,7 +58,15 @@
         </ul>
     </main>
     <footer>
-        <p>&copy; 2025 Ty Kornegay. All rights reserved.</p>
+        <p><strong>Ty Kornegay Corporation</em>, &copy;2025</strong></p>
+        <p><strong>When you need, we lead</strong></p>
     </footer>
+    
 </body>
 </html>
+
+
+
+
+
+
