--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <main>
             <h2>Welcome to ITSC 1110!</h2>
                 
-                    <p>Welcome to my Github wepage! My name is Ty Kornegay, and I am excited to be taking an Introduction to Computer Science Principles class. Through this course, I have had the pleasure to learn the foundational concepts of computer science, exploring how technology shapes our world, and developing problem-solving skills using computers. I am eager to continue building my knowledge, collaborate with classmates, and discover how computer science can open up new opportunities for creativity and innovation. Thank you for visiting my site as I begin this journey into the world of computing!</p>
+                    <p>Hi, my name is Ty Kornegay and welcome to my Github webpage.</p>
 
-                    <h1>Ty Kornegay's Talented Kangaroo | ITSC1110 | Home</h1>
+                    <h1>Ty Kornegay | ITSC1110 | Home</h1>
                     <nav><a href="index.html">Home</a> <a href="introductions.html">Introduction</a> <a href="">Contract</a></nav>
         <p>Hello! I'm Ty Kornegay. This is my personal homepage.</p>
         <p>Feel free to connect with me:</p>
